# soma-engine

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: daemon.rs  lib.rs  registry.rs
